--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <script type="module" src="router.js"></script>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/card-window.css" />
-    <link rel="stylesheet" href="./css/dropdown-menu.css" />
-    <link rel="stylesheet" href="./css/card-phrases.css" />
+    <script type="module" src="./client-side/router.js"></script>
+    <link rel="stylesheet" href="./client-side/css/styles.css" />
+    <link rel="stylesheet" href="./client-side/css/card-window.css" />
+    <link rel="stylesheet" href="./client-side/css/dropdown-menu.css" />
+    <link rel="stylesheet" href="./client-side/css/card-phrases.css" />
     <title>Roam Phrase App</title>
   </head>
 
